# SystemProgramming

./: .gitignore  .gitmodules  README.md
Autumn22/001.Testing02092022/: a.map  compileWithMap.bat
Autumn22/004.Stack/: Doxyfile  README.md  StackLib.lib  compareDouble.h  crunC.bat  log1.html  makefile  makefile-StackLib  runCP.bat
Autumn22/004.Stack/DebugInfo/: DebugInfo.h
Autumn22/005.SoftCPU/: AsmCode.cpp  AsmCode.h  asmLang.cpp  asmLangDSLInstructions.cpp  asmLangDSLRegisters.cpp
Autumn22/006.mmake/: makefile  mcmake.cpp  runCP.bat
Autumn22/007.List/: crunC.bat  makefile  trun.bat
Autumn22/008.TestingSystem/: crunC.bat  makefile
Autumn22/009.cmdParser/: makefile
Autumn22/010.logger/: makefile
Autumn22/011.ListCycleBuffer/: makefile
Autumn22/012.graphvizPtr/: makefile
Autumn22/013.graphvizBuf/: makefile
Autumn22/014.Tree/: makefile
Autumn22/015.recDescent/: a.txt  crunC.bat  makefile  runCP.bat
Autumn22/016.akinator/: data.txt  data2.txt  makefile  runCP.bat
Autumn22/config/: colors.settings.h
Autumn22/f004.Stack/: README.md  log.html  main.cpp  makefile-StackLib
Autumn22/t001.Testing02092022/: main.cpp
Autumn22/t002.Testing19092022/: main.cpp  makefile  text.txt
Autumn22/t003.Testing17102022/: main.cpp
Autumn22/t004.MLHomework/: main.cpp  out.txt
Autumn22/t005.LTHomework/: main.cpp
Autumn22/t006.Testing16122022/: main.cpp
Julesimf/001.Dates/: date.c  date.h  gregCalendar.c  gregCalendar.h  main.c  makefile  tests.c
Kernighan&Ritchie/1.1/: hello.c
Kernighan&Ritchie/1.2/: code_0.c  code_1.c  code_2.c  ex1.3.c  ex1.4.c
Spring22/001.Dates/: date.c  date.h  main.c  makefile
Summer22/001.QuadrEquation/: Doxyfile  QuadrEquation.cpp  QuadrEquation.h  README.md  compareDouble.h  main.cpp  makefile  myTest.txt  quadrEquationIO.cpp  quadrEquationIO.h  runDoxygen.bat  tests.c  tests.cpp  tests.h
Summer22/002.StrLib/: Doxyfile  README.md  main.cpp  makefile  strLib.cpp  strLib.h
Summer22/003.Onegin/: Doxyfile  EvgeniyOnegin.txt  ListOfLines.cpp  ListOfLines.h  README.md  alphabet.txt  cyrillicString.cpp  cyrillicString.h  main.cpp  makefile  pervert.cpp  pervert.h  runCP.bat
Winter23/004.Mandelbrot/: README.md  logfps-measured.txt  mainAVX.s  mainAVXcompare.s  mainAVXw1.s  mainAVXw2.s  mainAVXwith.s  mainErr.s  makefile  runCP.bat  runCPAVX.bat  runxAll.bat  stat.txt
Winter23/005.AlphaBlending/: README.md  logfps.txt  makefile  runCP.bat  runCPAVX.bat  xconfig.txt
Winter23/006.Hack/: README.md  makefile  runCP.bat
Winter23/Algths/: CMakeLists.txt  in.txt  main.cpp
Winter23/pr002.Stack/: CMakeLists.txt  README.md  log.txt  stat.txt
Winter23/pr002.Stack/source/: StackArr.cpp  StackArr.h  StackList.cpp  StackList.h  include.h  mainAnalytic.cpp  mainTest1Arr.cpp  mainTest1List.cpp  mainTest2Arr.cpp  mainTest2List.cpp  mainTest3Arr.cpp  mainTest3List.cpp
Winter23/pr003.Sort/: CMakeLists.txt  README.md
Winter23/pr003.Sort/source/: BubbleSort.cpp  InsertSort.cpp  SizeGen.cpp  SizeGen.h  Sort.h  include.h  mainAnalytic.cpp  mainReport.cpp  mainTest.cpp  suffs
Winter23/pr005.Tree/: CMakeLists.txt  README.md  outputTest001.txt
Winter23/pr005.Tree/source/: Tree.cpp  Tree.h  main001.cpp  time.h
Winter23/t001.Algths/: CMakeLists.txt
(+369 files in other folders)
